payloads: Enable building depthcharge as part of the coreboot build
For CHROMEOS builds, depthcharge can be built automatically.
This dependency exists because depthcharge without vboot and subsequent
signing of the image doesn't work very well, and both are keyed to that
flag as well.

Change-Id: Id0195bd3b4e454f382782106d6512469106daac5
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/10924
Tested-by: build bot (Jenkins)

--- a/payloads/Makefile.inc
+++ b/payloads/Makefile.inc
@@ -23,6 +23,7 @@ payloads/coreinfo/build/coreinfo.elf coreinfo:
 clean-payloads:
 	$(MAKE) -C payloads/coreinfo clean
 	$(MAKE) -C payloads/libpayload clean
+	$(MAKE) -C payloads/external/depthcharge -f Makefile.inc clean
 	$(MAKE) -C payloads/external/SeaBIOS -f Makefile.inc clean
 	$(MAKE) -C payloads/external/U-Boot -f Makefile.inc clean
 	$(MAKE) -C payloads/external/Memtest86Plus -f Makefile.inc clean
@@ -31,6 +32,7 @@ clean-payloads:
 distclean-payloads:
 	$(MAKE) -C payloads/coreinfo distclean
 	$(MAKE) -C payloads/libpayload distclean
+	$(MAKE) -C payloads/external/depthcharge -f Makefile.inc distclean
 	$(MAKE) -C payloads/external/SeaBIOS -f Makefile.inc distclean
 	$(MAKE) -C payloads/external/U-Boot -f Makefile.inc distclean
 	$(MAKE) -C payloads/external/Memtest86Plus -f Makefile.inc distclean
