external/Makefile.inc: Update SeaBIOS version file
SeaBIOS updated how versioning is done, and out/version.c no longer
exists.  The new file with version information is autoversion.h.

Change-Id: I10abee73ecc51e52c9ff7a2e7a9099339b1a4b40
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/12567
Tested-by: build bot (Jenkins)
Reviewed-by: Idwer Vollering <vidwer@gmail.com>
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -32,7 +32,7 @@ endif
 # set up payload config and version files for later inclusion
 ifeq ($(CONFIG_PAYLOAD_SEABIOS),y)
 PAYLOAD_CONFIG=payloads/external/SeaBIOS/seabios/.config
-PAYLOAD_VERSION=payloads/external/SeaBIOS/seabios/out/version.c
+PAYLOAD_VERSION=payloads/external/SeaBIOS/seabios/out/autoversion.h
 endif
 ifeq ($(CONFIG_PAYLOAD_FILO),y)
 PAYLOAD_CONFIG=payloads/external/FILO/filo/.config
