--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -54,8 +54,7 @@ seabios:
 			CONFIG_SEABIOS_THREAD_OPTIONROMS=$(CONFIG_SEABIOS_THREAD_OPTIONROMS) \
 			CONFIG_SEABIOS_VGA_COREBOOT=$(CONFIG_SEABIOS_VGA_COREBOOT) \
 			CONFIG_CONSOLE_SERIAL=$(CONFIG_CONSOLE_SERIAL) \
-			CONFIG_TTYS0_BASE=$(CONFIG_TTYS0_BASE) \
-			CONFIG_SEABIOS_MALLOC_UPPERMEMORY=$(CONFIG_SEABIOS_MALLOC_UPPERMEMORY)
+			CONFIG_TTYS0_BASE=$(CONFIG_TTYS0_BASE)
 
 payloads/external/SeaBIOS/seabios/out/vgabios.bin: seabios
 payloads/external/SeaBIOS/seabios/out/bios.bin.elf: seabios
