Makefile.inc: Move addition of payload rev & config to payload makefile
These files need to be added to cbfs-files after PAYLOAD_CONFIG
and PAYLOAD_VERSION have been defined.  Where they were before,
they didn't get added to the final build.

Change-Id: Ib1b230f9eb72a8c1710ef473a9f24c0fb7ec6e17
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/12751
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -26,6 +26,14 @@ PAYLOAD_CONFIG=payloads/external/FILO/filo/.config
 PAYLOAD_VERSION=payloads/external/FILO/filo/build/version.h
 endif
 
+cbfs-files-$(CONFIG_INCLUDE_CONFIG_FILE) += payload_config
+payload_config-file := $(PAYLOAD_CONFIG)
+payload_config-type := raw
+
+cbfs-files-$(CONFIG_INCLUDE_CONFIG_FILE) += payload_revision
+payload_revision-file := $(PAYLOAD_VERSION)
+payload_revision-type := raw
+
 SEABIOS_CC_OFFSET=$(if $(filter %ccache,$(HOSTCC)),2,1)
 seabios:
 	$(MAKE) -C payloads/external/SeaBIOS -f Makefile.inc \
