payloads: fix dependencies for seabios and filo
config and revision data need to be around before they're added to CBFS.

Change-Id: I195156773effd5137c3fda3639c002fbec6e7158
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/12971
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/payloads/external/Makefile.inc
+++ b/payloads/external/Makefile.inc
@@ -53,6 +53,8 @@ seabios:
 
 payloads/external/SeaBIOS/seabios/out/vgabios.bin: seabios
 payloads/external/SeaBIOS/seabios/out/bios.bin.elf: seabios
+payloads/external/SeaBIOS/seabios/.config: seabios
+payloads/external/SeaBIOS/seabios/out/autoversion.h: seabios
 
 filo:
 	$(MAKE) -C payloads/external/FILO -f Makefile.inc \
@@ -63,6 +65,8 @@ filo:
 			CONFIG_FILO_STABLE=$(CONFIG_FILO_STABLE)
 
 payloads/external/FILO/filo/build/filo.elf: filo
+payloads/external/FILO/filo/.config: filo
+payloads/external/FILO/filo/build/version.h: filo
 
 grub2:
 	$(MAKE) -C payloads/external/GRUB2 -f Makefile.inc \
