u-boot: Make sure targets aren't duplicated
When U-Boot isn't selected as a payload, two of the targets:
$(project_dir): and $(project_dir)/$(TAG-y) evaluated to the same
value, generating a make warning when running a clean.  By adding
additional text to the file that is created, this is avoided.

Gets rid of these warnings:
Makefile.inc:54: warning: overriding commands for target `u-boot'
Makefile.inc:37: warning: ignoring old commands for target `u-boot'

Change-Id: I4b4df753612b674b3ccde2a757338840be92d1f2
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/13767
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/payloads/external/U-Boot/Makefile.inc
+++ b/payloads/external/U-Boot/Makefile.inc
@@ -50,7 +50,7 @@ else
 	touch $(project_dir)/$(STABLE_COMMIT_ID)
 endif
 
-$(project_dir)/$(TAG-y): fetch
+$(project_dir)/tag-$(TAG-y): fetch
 	echo "    Checking out $(project_name) revision $(TAG-y)"
 	cd $(project_dir); git checkout master; git branch -D coreboot 2>/dev/null; git checkout -b coreboot $(TAG-y)
 
@@ -58,7 +58,7 @@ config: $(project_dir)/$(TAG-y)
 	rm -f $(project_config_file)
 ifneq ($(CONFIG_PAYLOAD_CONFIGFILE),)
 ifneq ("$(wildcard $(CONFIG_PAYLOAD_CONFIGFILE))","")
-	cat $(CONFIG_PAYLOAD_CONFIGFILE)" > $(project_config_file)
+	cat $(CONFIG_PAYLOAD_CONFIGFILE)" > tag-$(project_config_file)
 else
 	echo "Error: File $(CONFIG_PAYLOAD_CONFIGFILE) does not exist"
 	false
