--- a/payloads/Kconfig
+++ b/payloads/Kconfig
@@ -67,4 +67,12 @@ config COREINFO_SECONDARY_PAYLOAD
 	  coreinfo can be loaded as a secondary payload under SeaBIOS, GRUB,
 	  or any other payload that can load additional payloads.
 
+config MEMTEST_SECONDARY_PAYLOAD
+	bool "Load Memtest86+ as a secondary payload"
+	default n
+	depends on ARCH_X86  && !PAYLOAD_NONE
+	help
+	  Memtest86+ can be loaded as a secondary payload under SeaBIOS, GRUB,
+	  or any other payload that can load additional payloads.
+
 endmenu
