--- a/payloads/Kconfig
+++ b/payloads/Kconfig
@@ -59,6 +59,8 @@ config PAYLOAD_IS_FLAT_BINARY
 	  Add the payload to cbfs as a flat binary type instead of as an
 	  elf payload
 
+menu "Secondary Payloads"
+
 config COREINFO_SECONDARY_PAYLOAD
 	bool "Load coreinfo as a secondary payload"
 	default n
@@ -70,9 +72,10 @@ config COREINFO_SECONDARY_PAYLOAD
 config MEMTEST_SECONDARY_PAYLOAD
 	bool "Load Memtest86+ as a secondary payload"
 	default n
-	depends on ARCH_X86  && !PAYLOAD_NONE
+	depends on ARCH_X86
 	help
 	  Memtest86+ can be loaded as a secondary payload under SeaBIOS, GRUB,
 	  or any other payload that can load additional payloads.
 
+endmenu # "Secondary Payloads"
 endmenu
