coreinfo: Remove .xcompile when doing a clean
Change-Id: I3e719e105c4bacd5e02e055d3f00650a1e126656
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/13965
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>

--- a/payloads/coreinfo/Makefile
+++ b/payloads/coreinfo/Makefile
@@ -127,7 +127,7 @@ $(obj)/config.h:
 $(shell mkdir -p $(obj) $(objk)/lxdialog $(KCONFIG_SPLITCONFIG))
 
 clean:
-	rm -rf build/*.elf build/*.o
+	rm -rf build/*.elf build/*.o .xcompile
 
 distclean: clean
 	rm -rf build
