codebase: Change makefile $(shell pwd) commands to $(CURDIR)
- Change the makefile command $(shell pwd) to $(CURDIR) to find the
current directory without going out to the shell.

Change-Id: I4890eba6129630acd2883b92de77308d39949443
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/13967
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>

--- a/payloads/coreinfo/Makefile
+++ b/payloads/coreinfo/Makefile
@@ -14,7 +14,7 @@
 ## GNU General Public License for more details.
 ##
 
-src := $(shell pwd)
+src := $(CURDIR)
 srctree := $(src)
 srck := $(src)/../../util/kconfig
 coreinfo_obj := $(src)/build
@@ -88,18 +88,18 @@ include $(src)/.config
 real-all: $(TARGET)
 
 $(TARGET): $(src)/.config $(coreinfo_obj)/config.h $(OBJS) libpayload
-	printf "    LPCC       $(subst $(shell pwd)/,,$(@)) (LINK)\n"
+	printf "    LPCC       $(subst $(CURDIR)/,,$(@)) (LINK)\n"
 	$(LPCC) -o $@ $(OBJS)
 	$(OBJCOPY) --only-keep-debug $@ $(TARGET).debug
 	$(OBJCOPY) --strip-debug $@
 	$(OBJCOPY) --add-gnu-debuglink=$(TARGET).debug $@
 
 $(coreinfo_obj)/%.S.o: $(src)/%.S libpayload
-	printf "    LPAS       $(subst $(shell pwd)/,,$(@))\n"
+	printf "    LPAS       $(subst $(CURDIR)/,,$(@))\n"
 	$(LPAS) -o $@ $<
 
 $(coreinfo_obj)/%.o: $(src)/%.c libpayload
-	printf "    LPCC       $(subst $(shell pwd)/,,$(@))\n"
+	printf "    LPCC       $(subst $(CURDIR)/,,$(@))\n"
 	$(LPCC) $(CFLAGS) -c -o $@ $<
 
 else
