libpayload: Make comment into help text
Change-Id: I8c8669e73e335e12cb3785cf84b878c305dd5929
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-on: https://review.coreboot.org/14068
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/payloads/libpayload/Kconfig
+++ b/payloads/libpayload/Kconfig
@@ -623,10 +623,12 @@ config LITTLE_ENDIAN
 	default n
 	bool
 
-# Whether the target system has an IO address space.
 config IO_ADDRESS_SPACE
 	default n
 	bool
+	help
+	  This option is turned on if the target system has a separate
+	  IO address space. This is typically only the case on x86.
 
 source "arch/arm/Kconfig"
 source "arch/arm64/Kconfig"
