libpayload: Move base address, stack and heap size to Kconfig
This will allow more payloads to use the standard linker script
instead of implementing their own.

Change-Id: Ie60120769829f427ceb722109d85859b61dbde31
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-on: https://review.coreboot.org/14074
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/payloads/libpayload/Kconfig
+++ b/payloads/libpayload/Kconfig
@@ -119,6 +119,35 @@ config MULTIBOOT
 	depends on ARCH_X86
 	default y
 
+config HEAP_SIZE
+	int "Heap size"
+	default 131072
+	help
+	  This is the heap size (malloc'able size) available
+	  to the payload.
+
+	  If unsure, set to 131072 (128K)
+
+config STACK_SIZE
+	int "Stack size"
+	default 16384
+	help
+	  This is the stack size available to the payload.
+
+	  If unsure, set to 16384 (16K)
+
+config BASE_ADDRESS
+	hex "Base address"
+	default 0x04000000 if ARCH_ARM
+	default 0x80100000 if ARCH_ARM64
+	default 0x00000000 if ARCH_MIPS
+	default 0x00100000 if ARCH_X86
+	help
+	  This is the base address for the payload.
+
+	  If unsure, set to 0x00100000 on x86, 0x00000000 on MIPS,
+	  0x04000000 on ARM or 0x80100000 on ARM64.
+
 endmenu
 
 menu "Standard Libraries"
