payloads/external: Rename Makefile.inc to Makefile
These makefiles are not included by anything, so they shouldn't be
named Makefile.inc.  Also, having them all be named 'Makefile' makes
some other consolidation work I'm doing much easier.

Change-Id: I1234539ba6a0a6f47d2eb0c21de3da3607c6b8de
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/14130
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/payloads/Makefile.inc
+++ b/payloads/Makefile.inc
@@ -23,18 +23,18 @@ payloads/coreinfo/build/coreinfo.elf coreinfo:
 clean-payloads:
 	$(MAKE) -C payloads/coreinfo clean
 	$(MAKE) -C payloads/libpayload clean
-	$(MAKE) -C payloads/external/depthcharge -f Makefile.inc clean
-	$(MAKE) -C payloads/external/SeaBIOS -f Makefile.inc clean
-	$(MAKE) -C payloads/external/U-Boot -f Makefile.inc clean
-	$(MAKE) -C payloads/external/Memtest86Plus -f Makefile.inc clean
+	$(MAKE) -C payloads/external/depthcharge clean
+	$(MAKE) -C payloads/external/SeaBIOS clean
+	$(MAKE) -C payloads/external/U-Boot clean
+	$(MAKE) -C payloads/external/Memtest86Plus clean
 
 
 distclean-payloads:
 	$(MAKE) -C payloads/coreinfo distclean
 	$(MAKE) -C payloads/libpayload distclean
-	$(MAKE) -C payloads/external/depthcharge -f Makefile.inc distclean
-	$(MAKE) -C payloads/external/SeaBIOS -f Makefile.inc distclean
-	$(MAKE) -C payloads/external/U-Boot -f Makefile.inc distclean
-	$(MAKE) -C payloads/external/Memtest86Plus -f Makefile.inc distclean
+	$(MAKE) -C payloads/external/depthcharge distclean
+	$(MAKE) -C payloads/external/SeaBIOS distclean
+	$(MAKE) -C payloads/external/U-Boot distclean
+	$(MAKE) -C payloads/external/Memtest86Plus distclean
 
 .phony: clean-payloads distclean-payloads
